--- a/home/css/style.css
+++ b/home/css/style.css
@@ -75,20 +75,22 @@ header .navbar-default .navbar-nav {
   padding-top: 10px;
 }
 header .navbar-default .navbar-nav li a {
-  color: #333333;
+  color: #6f6f6f;
   padding: 10px 26px;
   font-size: 15px;
+  font-weight:800;
 }
 font header .navbar-default .navbar-nav li a:hover {
   color: #000;
 }
 .copyrights{
-	text-indent:-9999px;
-	height:0;
-	line-height:0;
-	font-size:0;
-	overflow:hidden;
+  text-indent:-9999px;
+  height:0;
+  line-height:0;
+  font-size:0;
+  overflow:hidden;
 }
+
 /*---------------------------------------------
 					Index Start 
 -----------------------------------------------*/
@@ -113,7 +115,6 @@ font header .navbar-default .navbar-nav li a:hover {
   width: 100%;
   height: 100%;
   background: linear-gradient(to left, #8b86a3, #322e40);
- /* background: linear-gradient(to left, #4E5E82, #050B17);*/
   opacity: 0.8;
 }
 #slider .block {
@@ -160,7 +161,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-top: 20px;
 }
 /*--
-	service Start 
+	service Start
 --*/
 #service {
   text-align: center;
@@ -186,7 +187,7 @@ font header .navbar-default .navbar-nav li a:hover {
   line-height: 1.8;
 }
 /*--
-	call-to-action Start 
+	call-to-action Start
 --*/
 #call-to-action {
   background: url("../img/call-to-action-bg.jpg") no-repeat;
@@ -228,7 +229,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-top: 30px;
 }
 /*--
-	Feature Start 
+	Feature Start
 --*/
 #feature {
   background: url("../img/featue-bg.jpg");
@@ -267,7 +268,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 10px 20px;
 }
 /*--
-	content Start 
+	content Start
 --*/
 #testimonial {
   padding: 100px 0;
@@ -342,7 +343,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border: 0px;
 }
 /*--
-	features Start 
+	features Start
 --*/
 #clients-logo-section {
   padding-top: 30px;
@@ -352,10 +353,10 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 0px 50px;
 }
 /*---------------------------------------------
-					Work Start 
+					Work Start
 -----------------------------------------------*/
 /*--
-	Slider-work Start 
+	Slider-work Start
 --*/
 #global-header {
   background: url("../img/slider-bg.jpg") no-repeat;
@@ -398,7 +399,7 @@ font header .navbar-default .navbar-nav li a:hover {
   word-spacing: 3px;
 }
 /*--
-	portfolio-work Start 
+	portfolio-work Start
 --*/
 #portfolio-work {
   overflow: hidden;
@@ -534,7 +535,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: none;
 }
 /*--
-	wrapper-work Start 
+	wrapper-work Start
 --*/
 #wrapper-work {
   overflow: hidden;
@@ -584,7 +585,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-right: 80px;
 }
 /*--
-	features-work Start 
+	features-work Start
 --*/
 #features-work {
   padding-top: 50px;
@@ -597,17 +598,17 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 40px 0px;
 }
 /*---------------------------------------------
-					Work Close 
+					Work Close
 -----------------------------------------------*/
 /*=============================================*/
 /*---------------------------------------------
-					 Contact Start 
+					 Contact Start
 -----------------------------------------------*/
 /*--
-	slider-contact Start 
+	slider-contact Start
 --*/
 #slider-contact {
-  background: url("../img/slider-bg2.jpg") no-repeat;
+  background: url("../img/slider-bg.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
