--- a/home/css/style.css
+++ b/home/css/style.css
@@ -98,7 +98,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider Start 
 --*/
 #slider {
-  background: url("../img/slider-bg.jpg") no-repeat;
+  background: url("../img/slider-bg8.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -114,7 +114,10 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8b86a3, #322e40);
+  /*background: linear-gradient(to left, #311b63, #000238 0%);*/
+  /*background: linear-gradient(to left, #311b63, #000264 0%);*/
+  background: linear-gradient(to left, #311b63, #00024c 0%);
+  /*background: linear-gradient(to left, #040049, #000274 0%);*/
   opacity: 0.8;
 }
 #slider .block {
@@ -207,7 +210,7 @@ font header .navbar-default .navbar-nav li a:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: #1d192c;
+  background: #191734;
   opacity: 0.8;
 }
 #call-to-action h2 {
@@ -225,7 +228,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border: none;
   background-color: #fff;
   font-size: 15px;
-  color: #333333;
+  color: #00024c;
   margin-top: 30px;
 }
 /*--
@@ -263,7 +266,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-bottom: 20px;
 }
 #feature .btn-view-works {
-  background: #655E7A;
+  background: #4a477a;
   color: #fff;
   padding: 10px 20px;
 }
@@ -359,7 +362,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider-work Start
 --*/
 #global-header {
-  background: url("../img/slider-bg.jpg") no-repeat;
+  background: url("../img/slider-bg8.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
@@ -375,7 +378,10 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #928dab, #1f1c2c 70%);
+  /*background: linear-gradient(to left, #928dab, #1f1c2c 90%);*/
+  /*background: linear-gradient(to left, #928dab, #1f1c2c 70%);*/
+  /*background: linear-gradient(to left, #220a40, #160940 100%);*/
+  background: linear-gradient(to left, #00024c, #00024c 0%);
   opacity: 0.8;
 }
 #global-header .block {
@@ -390,6 +396,7 @@ font header .navbar-default .navbar-nav li a:hover {
   letter-spacing: 6px;
   padding-bottom: 15px;
   margin-top: 0;
+  margin-right:80px;
   text-transform: capitalize;
 }
 #global-header .block p {
@@ -397,6 +404,7 @@ font header .navbar-default .navbar-nav li a:hover {
   font-weight: 300;
   letter-spacing: 1px;
   word-spacing: 3px;
+  margin-right:80px;
 }
 /*--
 	portfolio-work Start
@@ -608,7 +616,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	slider-contact Start
 --*/
 #slider-contact {
-  background: url("../img/slider-bg.jpg") no-repeat;
+  background: url("../img/slider-bg8.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
@@ -623,7 +631,8 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #928dab, #1f1c2c 70%);
+  /*background: linear-gradient(to left, #928dab, #1f1c2c 70%);*/
+  background: linear-gradient(to left, #220a40,#00024c 100%);
   opacity: 0.8;
 }
 #slider-contact .block {
@@ -679,7 +688,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #contact-form .block button {
   width: 100%;
   height: 60px;
-  background: #47424C;
+  background: #2f2f4c;
   border: none;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
