--- a/home/css/style.css
+++ b/home/css/style.css
@@ -228,7 +228,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border: none;
   background-color: #fff;
   font-size: 15px;
-  color: #00024c;
+  color: #000000;
   margin-top: 30px;
 }
 /*--
@@ -688,7 +688,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #contact-form .block button {
   width: 100%;
   height: 60px;
-  background: #2f2f4c;
+  background: #47424C;
   border: none;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
