--- a/home/css/style.css
+++ b/home/css/style.css
@@ -688,7 +688,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #contact-form .block button {
   width: 100%;
   height: 60px;
-  background: #47424C;
+  background: #4a477a;
   border: none;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
