--- a/home/css/style.css
+++ b/home/css/style.css
@@ -98,7 +98,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider Start 
 --*/
 #slider {
-  background: url("../img/slider-bg8.jpg") no-repeat;
+  background: url("../img/blue-bg.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -115,8 +115,8 @@ font header .navbar-default .navbar-nav li a:hover {
   width: 100%;
   height: 100%;
   /*background: linear-gradient(to left, #311b63, #000238 0%);*/
-  /*background: linear-gradient(to left, #311b63, #000264 0%);*/
-  background: linear-gradient(to left, #311b63, #00024c 0%);
+  background: linear-gradient(to left,#3b39a3, #2a2640);
+  /*background: linear-gradient(to left, #302e88, #00024c 0%);*/
   /*background: linear-gradient(to left, #040049, #000274 0%);*/
   opacity: 0.8;
 }
@@ -362,7 +362,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider-work Start
 --*/
 #global-header {
-  background: url("../img/slider-bg8.jpg") no-repeat;
+  background: url("../img/blue-bg.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
@@ -381,7 +381,7 @@ font header .navbar-default .navbar-nav li a:hover {
   /*background: linear-gradient(to left, #928dab, #1f1c2c 90%);*/
   /*background: linear-gradient(to left, #928dab, #1f1c2c 70%);*/
   /*background: linear-gradient(to left, #220a40, #160940 100%);*/
-  background: linear-gradient(to left, #00024c, #00024c 0%);
+  background: linear-gradient(to left,#3b39a3, #2a2640);
   opacity: 0.8;
 }
 #global-header .block {
