--- a/home/css/console.css
+++ b/home/css/console.css
@@ -7,3 +7,11 @@ body {
 .form-body {
 	margin: 0 auto;
 }
+
+.input-cell {
+	margin-top: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+	display: block;
+}
